--- a/index.css
+++ b/index.css
@@ -1,8 +1,22 @@
 @charset 'UTF-8';
 
+body {
+	background: white;
+	color: gray;
+	font-family: 'Source Code Pro', monospace;
+	font-size: 14px;
+	margin: 0;
+	padding: 0;
+	overflow-x: hidden;
+}
+
 p,h1,h2,h3,h4,h5,h6,a {
 	color: gray;
 	overflow-wrap: break-word;
 	text-decoration: none;
   	word-wrap: break-word;
+}
+
+img {
+	
 }
