--- a/index.css
+++ b/index.css
@@ -10,6 +10,13 @@ body {
 	overflow-x: hidden;
 }
 
+div.container {
+	max-width: 300px;
+	display: block;
+	float: left;
+	border: 1px solid gray;
+}
+
 p,h1,h2,h3,h4,h5,h6,a {
 	color: gray;
 	text-align: justify;
