--- a/index.css
+++ b/index.css
@@ -11,10 +11,12 @@ body {
 }
 
 div.container {
-	max-width: 300px;
+	max-width: 500px;
+	width: device-width;
 	display: block;
 	float: left;
 	border: 1px solid gray;
+	padding: 15px;
 }
 
 p,h1,h2,h3,h4,h5,h6,a {
