--- a/index.css
+++ b/index.css
@@ -1,15 +1,15 @@
 @charset 'UTF-8';
 
 body {
-	background: white;
-	color: gray;
+	background: black;
+	color: white;
 	font-family: 'Source Code Pro', monospace;
 	font-size: 12px;
 	overflow-x: hidden;
 }
 
 p,h1,h2,h3,h4,h5,h6 {
-	color: gray;
+	color: white;
 	text-align: justify;
 	overflow-wrap: break-word;
   	word-wrap: break-word;
@@ -22,15 +22,16 @@ a {
 
 img {
 	-webkit-filter: grayscale(100%); /*Safari 6.0 - 9.0*/
-    	filter: grayscale(100%);
+    filter: grayscale(100%);
+	filter: invert();
 }
 
 table {
 	border-collapse: collapse;
 }
 
-tr, td {
+td {
 	vertical-align: top;
-	border: 1px solid black;
+	border: 0.5px solid white;
 	padding: 10px;
 }
