--- a/index.css
+++ b/index.css
@@ -20,6 +20,12 @@ a {
 	text-decoration: none;
 }
 
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
 img {
 	-webkit-filter: grayscale(100%); /*Safari 6.0 - 9.0*/
     filter: grayscale(100%);
